<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:onClick="startOn"
            android:text="Начать заново"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.064"
            />
        <TextView
            android:id="@+id/polepobedi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:layout_margin="20sp"
            android:textAlignment="center"
            android:textSize="20dp"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                style="@style/kresitiki"
                android:onClick="onMyButtonClick"
                />

            <Button
                android:id="@+id/button2"
                style="@style/kresitiki"
                android:onClick="onMyButtonClick"
                />

            <Button
                android:id="@+id/button3"
                style="@style/kresitiki"
                android:onClick="onMyButtonClick"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                style="@style/kresitiki"
                android:onClick="onMyButtonClick"
                />

            <Button
                android:id="@+id/button5"
                style="@style/kresitiki"
                android:onClick="onMyButtonClick"
                />

            <Button
                android:id="@+id/button6"
                style="@style/kresitiki"
                android:onClick="onMyButtonClick"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                style="@style/kresitiki"
                android:onClick="onMyButtonClick"
                />

            <Button
                android:id="@+id/button8"
                style="@style/kresitiki"
                android:onClick="onMyButtonClick"

                />
            <Button
                android:id="@+id/button9"
                style="@style/kresitiki"
                android:onClick="onMyButtonClick"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>